Bug 556821 - Use Ogg Skeleton presentation time for start of videos - r=cpearce